<resources>
    <string name="app_name">GCREA</string>
    <string name="title_club">Swinburne Sarawak Green Club</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_about">About</string>
    <string name="title_recycle">Recycle</string>
    <string name="title_home">Home</string>
    <string name="title_reward">Rewards</string>
    <string name="title_profile">Profile</string>
    <string name="img_desc">Swinburne Sarawak Green Club Logo</string>
    <string name="web_client_id">937672069156-23qsdtmppom5emv03scmu40ek8e6ciq1.apps.googleusercontent.com</string>
    <string name="sign_in_text">ENTER</string>
    <string name="aboutFragmentTitle">This is about fragment</string>
    <string name="about_title">About the Club</string>
    <string name="club_desc">An environmental club \nwhere we care for \nenvironment and wildlife conservation.\n\n\"Conservation starts at home.\"\n\n</string>
    <string name="committee_title">Current Committees</string>
    <string name="fragment_title_profile">My Profile</string>
    <string name="name_title">Name:</string>
    <string name="id_title">Student / Staff ID:</string>
    <string name="position_title">Position:</string>
    <string name="course_title">Course:</string>
    <string name="email_title">Email:</string>
    <string name="contact_title">Contact Number:</string>
    <string name="date_joined_title">Date Joined:</string>
    <string name="current_points_title">Current Points:</string>
    <string name="empty_text">Not filled yet</string>
    <string name="log_out_text">LOG OUT</string>
    <string name="submit_text">SUBMIT</string>
    <string name="edit_title_profile">Edit Profile</string>
    <string name="go_back_text">Go back</string>
    <string name="reward_title">My Reward</string>
    <string name="points_text">1</string>
    <string name="rewards_title_text">Rewards</string>
    <string name="my_points_title">My Points</string>
    <string name="reward1_text">1 paplet</string>
    <string name="reward2_text">2 paplets</string>
    <string name="reward3_text">3 paplets</string>
    <string name="reward4_text">1 paplet + 1 badge</string>
    <string name="reward5_text">2 paplets + 1 badge</string>
    <string name="reward6_text">3 paplets + 1 badge</string>
    <string name="reward7_text">1 paplet + 2 badges</string>
    <string name="reward8_text">2 paplets + 2 badges</string>
    <string name="reward9_text">3 paplets + 2 badges</string>
    <string name="reward10_text">1 Swinburne Sarawak\nGreen Club T-shirt</string>
    <string name="remind_text">If you want to claim the reward, \nplease go to G405, Swinburne and \napproach our committees.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_all_users_text">Check All Users</string>
    <string name="edit_icon_text">Edit icon</string>
    <string name="event_name">Paplet Project</string>
    <string name="join_text">JOIN</string>
    <string name="venue_text">Venue: Damai Beach</string>
    <string name="date_text">Date: 20 December 2021</string>
    <string name="event_name_text">Beach Cleanup</string>
    <string name="time_text">Time: 4.00 pm</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="fees_text">Fees: RM 0.00</string>
    <string name="event_desc">This is the first paplet project session that we have…</string>
    <string name="event_points_text">Points: 10</string>
    <string name="poster_text">Poster of the event</string>
    <string name="event_details_title">Event Details</string>
    <string name="add_event_title">Add Event</string>
    <string name="add_event_text">ADD EVENT</string>
    <string name="event_no_text">Current Number of Participants: 20</string>
    <string name="view_participants">View Participants</string>
    <string name="edit_event_title">Edit Event</string>
    <string name="edit_event_button">EDIT EVENT</string>
    <string name="recycleForm_Date">03/11/2000</string>
    <string name="recycleForm_Time">10:00AM</string>
    <string name="recycleForm_ItemSubtitle">Items to be Recycled</string>
    <string name="recycleForm_checkbox1">Papers</string>
    <string name="recycleForm_checkbox2">Plastic Bottles</string>
    <string name="recycleForm_checbox3">Electronics</string>
    <string name="recycleForm_checkbox4">Other:</string>
    <string name="recycleForm_submitButton">SUBMIT</string>
    <string name="recycleForm_ResetButton">RESET</string>
    <string name="textView_reDate">Date</string>
    <string name="textView_reTime">Time</string>
    <string name="editText_otherItems_hint">Please Specify</string>
    <string name="textView_reRemarks">Remarks</string>
    <string name="recycle_title_text">Request Recycling Session</string>
    <string name="where_to_find_us">Where to find us?\nCome G405, Swinburne Sarawak.</string>
    <string name="your_request">Your Request</string>
    <string name="no_request_text">You did not request for any session yet.</string>
    <string name="restatus_text">Status: Pending</string>
    <string name="reremarks_text">Remarks: Please help me to carry the boxes.</string>
    <string name="reitems_text">Items: Boxes, Used papers, Aluminium cans</string>
    <string name="retime_text">Time: 10:00:00</string>
    <string name="redate_text">Date: 30–3–2021</string>
    <string name="revenue_text">Venue: G405, Swinburne Sarawak Campus</string>
    <string name="reminder_text">*If you want to type more than one item in the Other, please separate them with comma (,)</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAcmwc498qdKS6Wq563gPcmQGiSkz2wnns</string>
    <string name="admin_request1_title">Pending Recycle Request</string>
    <string name="admin_request2_title">Accepted Recycle Request</string>
    <string name="no_pending_request">No pending recycle request right now.</string>
    <string name="no_accepted_request">No accepted recycle request right now.</string>
    <string name="request_by_userid">Requested By: 0123456789</string>
    <string name="accept_request">Accept</string>
    <string name="reject_request">Reject</string>
</resources>