<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetails">

    <TextView
        android:id="@+id/display_action_bar"
        android:text="@string/event_details_title"
        style="@style/actionBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:contentDescription="@string/edit_icon_text"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/image_display"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/poster_text"
        app:layout_constraintTop_toBottomOf="@id/display_action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/event_name_disp"
        style="@style/textTitle"
        android:text="@string/event_name_text"
        app:layout_constraintTop_toBottomOf="@+id/image_display"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/viewParticipantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_name_disp"
        app:layout_constraintBottom_toBottomOf="@+id/event_name_disp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        android:paddingHorizontal="3dp"
        android:textColor="@android:color/white"
        android:background="@color/colorLightBrown"
        android:text="@string/view_participants" />

    <TextView
        android:id="@+id/event_venue_disp"
        style="@style/textNormal"
        android:text="@string/venue_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/event_name_disp"
        app:layout_constraintStart_toStartOf="@id/event_name_disp"/>

    <TextView
        android:id="@+id/event_date_disp"
        style="@style/textNormal"
        android:text="@string/date_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/event_venue_disp"
        app:layout_constraintStart_toStartOf="@id/event_venue_disp"/>

    <TextView
        android:id="@+id/event_time_disp"
        style="@style/textNormal"
        android:text="@string/time_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/event_date_disp"
        app:layout_constraintStart_toStartOf="@id/event_date_disp"/>

    <TextView
        android:id="@+id/event_fees_disp"
        style="@style/textNormal"
        android:text="@string/fees_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/event_time_disp"
        app:layout_constraintStart_toStartOf="@id/event_desc_disp"/>

    <TextView
        android:id="@+id/event_points_disp"
        style="@style/textNormal"
        android:text="@string/event_points_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/event_fees_disp"
        app:layout_constraintStart_toStartOf="@id/event_desc_disp"/>

    <TextView
        android:id="@+id/event_participantsno_disp"
        style="@style/textNormal"
        android:text="@string/event_no_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/event_points_disp"
        app:layout_constraintStart_toStartOf="@id/event_desc_disp"/>

    <TextView
        android:id="@+id/event_desc_label"
        style="@style/textTitle"
        android:text="@string/description_title"
        app:layout_constraintTop_toBottomOf="@+id/event_participantsno_disp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/event_desc_disp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/displayDesc"
        android:text="@string/event_desc"
        app:layout_constraintTop_toBottomOf="@+id/event_desc_label"
        app:layout_constraintStart_toStartOf="@id/event_desc_label"/>

    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>