<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/event_name"
                style="@style/textTitle"
                android:text="@string/event_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_image" />


            <TextView
                android:id="@+id/event_desc"
                style="@style/textNormal"
                android:text="@string/event_desc"
                app:layout_constraintStart_toStartOf="@id/event_name"
                app:layout_constraintTop_toBottomOf="@id/event_name"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/joinButton"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="@+id/event_image"
                app:layout_constraintEnd_toEndOf="@+id/event_image"
                android:text="@string/join_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>